<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ServerActivity" >

 	<Button
       	android:id="@+id/search_again_btn"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="@string/search_again_btn_label"
       	android:visibility="gone" />
 	
    <TextView 
	    android:id="@+id/server_browse_data_label"
	   	android:layout_width="match_parent"
	 	android:layout_height="wrap_content"
	 	android:layout_marginBottom="5dip"
	 	android:text="@string/server_browse_data_label_text" />
	
    <LinearLayout 
	  	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="5dip" >
		<TextView
	        android:id="@+id/server_location_labeltext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/server_location_label_text"
	        android:textSize="12sp"  />
		<EditText
	        android:id="@+id/server_edittext_location"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right|center_vertical"
	        android:inputType="textNoSuggestions"
	        android:hint="@string/server_edittext_hint"
	        android:textSize="15sp" />
	</LinearLayout>
    
	<LinearLayout 
	  	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="5dip" >
		<TextView
	        android:id="@+id/server_spinner_labeltext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/server_spinner_label_text"
	        android:textSize="12sp"  />
		<Spinner
	        android:id="@+id/server_spinner"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right|center_vertical"
	        android:textSize="15sp" />
	</LinearLayout>
	
	<LinearLayout 
	  	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="5dip" >
		<TextView
	        android:id="@+id/server_date_range_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/server_date_range_label"
	        android:textSize="12sp"  />
		<Button
	        android:id="@+id/server_date_pick_from_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:text="@string/date_pick_from_btn_text" />
		<Button
	        android:id="@+id/server_date_pick_to_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:text="@string/date_pick_to_btn_text" />
	</LinearLayout>
	
	<LinearLayout 
	  	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="5dip" >
		<Button
		    android:id="@+id/server_show_search_results_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		   	android:text="@string/show_search_btn_text"
		    android:textSize="15sp"
		    android:drawableLeft="@drawable/ic_menu_search_holo_light"  />
		<Button
		    android:id="@+id/server_clear_search_filters"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		   	android:text="@string/clear_search_filters_text"
		    android:textSize="15sp"  />
	</LinearLayout>
	
	<ProgressBar
		android:id="@+id/prog_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@android:style/Widget.ProgressBar.Horizontal"
		android:visibility="gone" />
	
	<TextView
        android:id="@+id/server_no_results_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results_label"
        android:textSize="12sp" 
        android:visibility="gone"/>
	
	<TextView
        android:id="@+id/server_error_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" 
        android:visibility="gone"/>

	<ListView 
	    android:id="@+id/server_list" 
	    android:layout_width="match_parent"
  		android:layout_height="wrap_content" />

</LinearLayout>
