<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con_sens_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectedSensorActivity" >

	<TextView
        android:id="@+id/info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_sensor_label"
        android:textSize="15sp" />
	
	<LinearLayout 
	    android:id="@+id/result_nested_layout"
	  	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
		<TextView
	        android:id="@+id/result_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/show_result_label"
	        android:textSize="18sp" />
		<TextView
	        android:id="@+id/result_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right|center_vertical"
            android:hint="@string/show_result_text"
	        android:textSize="25sp"
	        android:maxLines="30"
	        android:scrollbars="vertical" />
	</LinearLayout>

	<Button 
	    android:id="@+id/go_to_history_btn"
	   	android:layout_width="match_parent"
	 	android:layout_height="wrap_content"
	 	android:layout_marginTop="80dip"
	 	android:text="@string/go_to_history_btn_label"
	 	android:visibility="gone"	/>
	
	<TextView
	    android:id="@+id/no_data_history_label"
	   	android:layout_width="match_parent"
	 	android:layout_height="wrap_content"
		android:layout_marginTop="80dip"
	 	android:text="@string/no_data_history_label"
	 	android:visibility="gone"	/>

</LinearLayout>
