<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<TextView
        android:id="@+id/main_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_act_label"
        android:textSize="15sp" />
	
	<Button android:id="@+id/go_to_con_sens_btn"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
	     android:text="@string/go_to_con_sens_mode"
	     android:drawableLeft="@drawable/device_access_network_wifi" />
	
	<Button android:id="@+id/go_to_phn_sens_btn"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="10dp"
	     android:layout_marginBottom="10dp"
	     android:text="@string/go_to_phn_sens_mode"
	     android:drawableLeft="@drawable/hardware_phone" />
	
	<Button android:id="@+id/go_to_map_view_btn"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="10dp"
	     android:layout_marginBottom="10dp"
	     android:text="@string/go_to_map_view_mode"
	     android:drawableLeft="@drawable/location_place" />
	
</LinearLayout>
